--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,8 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
 
+    androidTestCompile 'com.android.support:support-annotations:26.0.+'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
     testCompile 'junit:junit:4.12'
 }
