--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,12 +22,11 @@
         </activity>
         <activity
             android:name=".RecipeDetailActivity"
-            android:launchMode="singleTop"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:launchMode="singleTask"
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".StepDetailActivity"
-            android:launchMode="singleTop"
+            android:launchMode="standard"
             android:parentActivityName=".RecipeDetailActivity"></activity>
 
         <receiver android:name=".RecipeWidgetProvider">
