--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+ext {
+    supportLibVersion = '26.+'
+}
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
@@ -25,15 +29,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:cardview-v7:26.0.+'
-    compile 'com.android.support:recyclerview-v7:26.0.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
 
-    androidTestCompile 'com.android.support:support-annotations:26.0.+'
+    androidTestCompile "com.android.support:support-annotations:${supportLibVersion}"
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
 
     testCompile 'junit:junit:4.12'
 }
