--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity
             android:name=".RecipeDetailActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".StepDetailActivity"
